--- a/index.ipynb
+++ b/index.ipynb
@@ -724,40 +724,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1,\n",
-       " 'E3E9CC9F-7443-43F6-94AF-B5A0F802DBA1',\n",
-       " 1,\n",
-       " 1315925633,\n",
-       " '392904',\n",
-       " 1315925633,\n",
-       " '392904',\n",
-       " '{\\n  \"invalidCells\" : {\\n    \"1519001\" : \"TOTALPAY\",\\n    \"1518998\" : \"PRIMARYPAY\",\\n    \"1519000\" : \"RUNOFFPAY\",\\n    \"1518999\" : \"GENERALPAY\",\\n    \"1518994\" : \"OFFICECD\",\\n    \"1518996\" : \"OFFICEDIST\",\\n    \"1518991\" : \"ELECTION\"\\n  }\\n}',\n",
-       " None,\n",
-       " 'CANDID',\n",
-       " 'CANDNAME',\n",
-       " None,\n",
-       " 'OFFICEBORO',\n",
-       " None,\n",
-       " 'CANCLASS',\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'head' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-e3005bce03d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'data'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'head' is not defined"
+     ]
     }
    ],
    "source": [
-    "data['data'][0]"
+    "data['data'].h"
    ]
   },
   {
