Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -724,23 +724,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'head'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-9907342dfae6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#['data'][0]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'head'"
-     ]
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 'E3E9CC9F-7443-43F6-94AF-B5A0F802DBA1',\n",
+       " 1,\n",
+       " 1315925633,\n",
+       " '392904',\n",
+       " 1315925633,\n",
+       " '392904',\n",
+       " '{\\n  \"invalidCells\" : {\\n    \"1519001\" : \"TOTALPAY\",\\n    \"1518998\" : \"PRIMARYPAY\",\\n    \"1519000\" : \"RUNOFFPAY\",\\n    \"1518999\" : \"GENERALPAY\",\\n    \"1518994\" : \"OFFICECD\",\\n    \"1518996\" : \"OFFICEDIST\",\\n    \"1518991\" : \"ELECTION\"\\n  }\\n}',\n",
+       " None,\n",
+       " 'CANDID',\n",
+       " 'CANDNAME',\n",
+       " None,\n",
+       " 'OFFICEBORO',\n",
+       " None,\n",
+       " 'CANCLASS',\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head() #['data'][0]"
+    "data['data'][0]"
    ]
   },
   {
